--- a/src/app/pages/pointsbadges/pointsbadges.html
+++ b/src/app/pages/pointsbadges/pointsbadges.html
@@ -1,162 +1,207 @@
 <div class="point-content">
-    <h3 mat-header>{{ 'POINTSBADGES.TITLE' | translate }}</h3>
-    <mat-card class="assign-content" *ngIf="isTeacher">
+  <h3 mat-header>{{ 'POINTSBADGES.TITLE' | translate }}</h3>
+  <mat-card class="assign-content" *ngIf="isTeacher">
+    <!-- <mat-form-field> -->
+    <!-- <mat-select [(value)]="optionType" placeholder="{{'COMMON.TYPEASSIGNMENTCHOOSE' | translate}}" [formControl]="myControl">
+        <mat-option *ngFor="let option of options" [value]="option" (click)="GetStudents()">
+          {{option}}
+        </mat-option>
+      </mat-select> -->
+    <mat-form-field>
+      <mat-select [(value)]="groupSelected" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" [formControl]="myControl">
+        <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="GetStudents()">
+          {{group.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <!-- </mat-form-field> -->
+    <br>
+    <br>
+    <br>
+    Individual
+    <mat-slide-toggle (change)="individualorteam()" [checked]="teamsmode" [formControl]="myControl">
+      Teams
+    </mat-slide-toggle>
+    <br>
+    <br>
+    <mat-form-field *ngIf="individ && groupSelected">
+      <mat-select [(value)]="studentSelected" placeholder="{{ 'STUDIENTS.CHOOSE' | translate }}" [formControl]="myControl">
+        <mat-option *ngFor="let student of mystudents" [value]="student.id">
+          {{student.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field *ngIf="teammode && groupSelected && !groupnoteams">
+      <mat-select [(value)]="teamSelected" placeholder="{{ 'TEAMS.CHOOSE' | translate }}" [formControl]="myControl">
+        <mat-option *ngFor="let team of Teams" [value]="team" (click)="GetTeam()">
+          {{team.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </mat-card>
+  <mat-tab-group>
+    <mat-tab label="{{ 'POINTS.TITLE' | translate }}">
+      <br>
+      <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
+        <h5 mat-subheader>{{ 'POINTS.ASSIGN' | translate }}</h5>
         <mat-form-field>
-            <mat-select [(value)]="optionType" placeholder="{{'COMMON.TYPEASSIGNMENTCHOOSE' | translate}}"  [formControl]= "myControl">
-                <mat-option *ngFor="let option of options" [value]="option" (click)="GetStudents()">
-                    {{option}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field *ngIf="optionType">
-            <mat-select [(value)]="groupSelected" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" [formControl]= "myControl">
-              <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="GetStudents()">
-                {{group.name}}
-              </mat-option>
-            </mat-select>
+          <mat-select [(value)]="pointSelected" placeholder="{{ 'POINTS.CHOOSE' | translate }}" [formControl]="myControl">
+            <mat-option *ngFor="let point of points" [value]="point.id">
+              {{point.name}}
+            </mat-option>
+          </mat-select>
         </mat-form-field>
         <br>
-        <mat-form-field *ngIf="optionType == options[0] && groupSelected">
-            <mat-select [(value)]="studentSelected" placeholder="{{ 'STUDIENTS.CHOOSE' | translate }}" [formControl]= "myControl">
-              <mat-option *ngFor="let student of mystudents" [value]="student.id">
-                {{student.name}}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field *ngIf="optionType == options[1] && groupSelected">
-              <mat-select [(value)]="teamSelected" placeholder="{{ 'TEAMS.CHOOSE' | translate }}" [formControl]= "myControl">
-                <mat-option *ngFor="let student of collectionTeams" [value]="student">
-                  {{student.name}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-    </mat-card>
-    <mat-tab-group>
-      <mat-tab label ="{{ 'POINTS.TITLE' | translate }}">
-        <br>
-          <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
-              <h5 mat-subheader>{{ 'POINTS.ASSIGN' | translate }}</h5>
-              <mat-form-field >
-                  <mat-select [(value)]="pointSelected" placeholder="{{ 'POINTS.CHOOSE' | translate }}" [formControl]= "myControl">
-                    <mat-option *ngFor="let point of points" [value]="point.id">
-                      {{point.name}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-                <br>
-                <mat-form-field>
-                    <input matInput type="number" min="0" [(ngModel)]="valueSelected" placeholder="{{ 'COMMON.CHOOSEAMOUNT' | translate }}">
-                  </mat-form-field>
-                  <button class="buttonsend" mat-raised-button (click)="sendPointRelation()">{{ 'POINTS.SEND' | translate }}</button>
-          </mat-card>
-          <br>
-            <mat-nav-list class = "studentlist" *ngIf="listPoints">
-                <h3 mat-subheader>{{ 'POINTS.MYPOINTS' | translate }}</h3>
-                <mat-list-item class="total">
-                    <h4 mat-line>{{ 'POINTS.TOTAL' | translate }}</h4>
-                    <p> {{totalPoints}}</p>
-                    <p mat-line>{{ 'POINTS.DESCOP' | translate }}</p>
-                  </mat-list-item>
+        <mat-form-field>
+          <input matInput type="number" min="0" [(ngModel)]="valueSelected" placeholder="{{ 'COMMON.CHOOSEAMOUNT' | translate }}">
+        </mat-form-field>
+        <button class="buttonsend" mat-raised-button (click)="sendPointRelation()">{{ 'POINTS.SEND' | translate }}</button>
+      </mat-card>
+      <br>
+      <mat-nav-list class="studentlist" *ngIf="listPoints">
+        <h3 mat-subheader>{{ 'POINTS.MYPOINTS' | translate }}</h3>
+        <mat-list-item class="total">
+          <h4 mat-line>{{ 'POINTS.TOTAL' | translate }}</h4>
+          <p> {{totalPoints}}</p>
+          <p mat-line>{{ 'POINTS.DESCOP' | translate }}</p>
+        </mat-list-item>
 
-                <mat-list-item *ngFor="let resultPoint of listPoints" >
-                  <img matListAvatar src={{resultPoint.point.image}}>
-                  <h4 mat-line>{{resultPoint.point.name}}</h4>
-                  <p>{{ 'POINTS.OBTAINED' | translate }}: {{resultPoint.relationPoint.value}}</p>
-                  <p mat-line>{{ 'POINTS.VALUEOF' | translate }}: {{resultPoint.point.value}}</p>
-                </mat-list-item>
-                <mat-progress-bar mode="buffer"></mat-progress-bar>
-              </mat-nav-list>
-            <mat-nav-list *ngIf="points">
-                <h3 mat-subheader>{{ 'POINTS.LIST' | translate }}</h3>
-                <mat-list-item *ngFor="let point of points" >
-                    <img matListAvatar src={{point.image}}>
-                  <h4 mat-line>{{point.name}}</h4>
-                  <p mat-line>{{ 'POINTSBADGES.POINTID' | translate }}{{point.id}}</p>
-                </mat-list-item>
-                <mat-progress-bar mode="buffer"></mat-progress-bar>
-              </mat-nav-list>
-              <br>
-              <div *ngIf="isTeacher" >
-                  <button mat-raised-button (click)="createPoint()">{{ 'POINTSBADGES.CREATEPOINT' | translate }}</button>
-                  <br>
-                  <mat-form-field>
-                      <input matInput [(ngModel)]="pointId" placeholder="{{'POINTSBADGES.POINTID' | translate}}">
-                    </mat-form-field>
-                    <button mat-raised-button (click)="deletePoint()">{{ 'POINTS.DELETE' | translate }}</button>
-              </div>
-      </mat-tab>
-
-      <mat-tab label= "{{ 'BADGES.TITLE' | translate }}">
-          <br>
-          <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
-              <h5 mat-subheader>{{ 'BADGES.ASSIGN' | translate }}</h5>
-            <mat-form-field >
-                <mat-select [(value)]="badgeSelected" placeholder="{{ 'BADGES.CHOOSE' | translate }}" [formControl]= "myControl">
-                  <mat-option *ngFor="let badge of badges" [value]="badge.id">
-                    {{badge.name}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-              <br>
-              <button class="buttonsend2" mat-raised-button (click)="sendBadgeRelation()">{{ 'BADGES.SEND' | translate }}</button>
-          </mat-card>
-          <br>
-          <mat-nav-list class = "studentlist" *ngIf="listBadges">
-              <h3 mat-subheader>{{ 'BADGES.MYBADGES' | translate }} ({{studentBadges.length}})</h3>
-              <mat-list-item *ngFor="let resultBadge of listBadges" >
-                <img matListAvatar src={{resultBadge.badge.image}}>
-                <h4 mat-line>{{resultBadge.badge.name}}</h4>
-                <p>{{ 'BADGES.VALUEOF' | translate }}: {{resultBadge.badge.value}}</p>
-              </mat-list-item>
-              <mat-progress-bar mode="buffer"></mat-progress-bar>
-            </mat-nav-list>
-            <br>
-        <mat-nav-list *ngIf="badges">
-            <h3 mat-subheader>{{ 'BADGES.LIST' | translate }}</h3>
-            <mat-list-item *ngFor="let badge of badges" >
-                <img matListAvatar src={{badge.image}}>
-                <h4 mat-line>{{badge.name}}</h4>
-              <p mat-line>{{ 'POINTSBADGES.BADGEID' | translate }}{{badge.id}}</p>
-            </mat-list-item>
-            <mat-progress-bar mode="buffer"></mat-progress-bar>
-          </mat-nav-list>
-          <br>
-          <div *ngIf="isTeacher">
-              <button mat-raised-button (click)="createBadge()">{{ 'POINTSBADGES.CREATEBADGE' | translate }}</button>
-              <br>
-              <mat-form-field>
-                <input matInput [(ngModel)]="badgeId" placeholder="{{ 'POINTSBADGES.BADGEID' | translate }}">
-              </mat-form-field>
-              <button mat-raised-button (click)="deleteBadge()">{{ 'BADGES.DELETE' | translate }}</button>
-          </div>
-      </mat-tab>
-      <mat-tab label = "{{ 'POINTS.STUDIENTS' | translate }}" *ngIf="isTeacher">
+        <mat-list-item *ngFor="let resultPoint of listPoints">
+          <!-- <img matListAvatar src={{resultPoint.point.image}}> -->
+          <h4 mat-line>{{resultPoint.point.name}}</h4>
+          <p>{{ 'POINTS.OBTAINED' | translate }}: {{resultPoint.relationPoint.value}}</p>
+          <p mat-line>{{ 'POINTS.VALUEOF' | translate }}: {{resultPoint.point.value}}</p>
+        </mat-list-item>
+        <mat-progress-bar mode="buffer"></mat-progress-bar>
+      </mat-nav-list>
+      <mat-nav-list *ngIf="points && isTeacher">
+        <h3 mat-subheader>{{ 'POINTS.LIST' | translate }}</h3>
+        <mat-list-item *ngFor="let point of points">
+          <!-- <img matListAvatar src={{point.image}}> -->
+          <h4 mat-line>{{point.name}}</h4>
+          <p mat-line>{{ 'POINTSBADGES.POINTID' | translate }}{{': '}}{{point.id}}</p>
+        </mat-list-item>
+        <mat-progress-bar mode="buffer"></mat-progress-bar>
+      </mat-nav-list>
+      <br>
+      <div *ngIf="isTeacher">
+        <button mat-raised-button (click)="createPoint()">{{ 'POINTSBADGES.CREATEPOINT' | translate }}</button>
         <br>
+        <mat-form-field>
+          <input matInput [(ngModel)]="pointId" placeholder="{{'POINTSBADGES.POINTID' | translate}}">
+        </mat-form-field>
+        <button mat-raised-button (click)="deletePoint()">{{ 'POINTS.DELETE' | translate }}</button>
+      </div>
+    </mat-tab>
+
+    <mat-tab label="{{ 'BADGES.TITLE' | translate }}">
+      <br>
+      <mat-card class="assign-content" *ngIf="isTeacher && (studentSelected || teamSelected)">
+        <h5 mat-subheader>{{ 'BADGES.ASSIGN' | translate }}</h5>
+        <mat-form-field>
+          <mat-select [(value)]="badgeSelected" placeholder="{{ 'BADGES.CHOOSE' | translate }}" [formControl]="myControl">
+            <mat-option *ngFor="let badge of badges" [value]="badge.id">
+              {{badge.name}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <br>
+        <button class="buttonsend2" mat-raised-button (click)="sendBadgeRelation()">{{ 'BADGES.SEND' | translate }}</button>
+      </mat-card>
+      <br>
+      <mat-nav-list class="studentlist" *ngIf="listBadges">
+        <h3 mat-subheader>{{ 'BADGES.MYBADGES' | translate }} ({{studentBadges.length}})</h3>
+        <mat-list-item *ngFor="let resultBadge of listBadges">
+          <img matListAvatar src={{resultBadge.badge.image}}>
+          <h4 mat-line>{{resultBadge.badge.name}}</h4>
+          <p>{{ 'BADGES.VALUEOF' | translate }}: {{resultBadge.badge.value}}</p>
+        </mat-list-item>
+        <mat-progress-bar mode="buffer"></mat-progress-bar>
+      </mat-nav-list>
+      <br>
+      <mat-nav-list *ngIf="badges && isTeacher">
+        <h3 mat-subheader>{{ 'BADGES.LIST' | translate }}</h3>
+        <mat-list-item *ngFor="let badge of badges">
+          <img matListAvatar src={{badge.image}}>
+          <h4 mat-line>{{badge.name}}</h4>
+          <p mat-line>{{ 'POINTSBADGES.BADGEID' | translate }}{{': '}}{{badge.id}}</p>
+        </mat-list-item>
+        <mat-progress-bar mode="buffer"></mat-progress-bar>
+      </mat-nav-list>
+      <br>
+      <div *ngIf="isTeacher">
+        <button mat-raised-button (click)="createBadge()">{{ 'POINTSBADGES.CREATEBADGE' | translate }}</button>
+        <br>
+        <mat-form-field>
+          <input matInput [(ngModel)]="badgeId" placeholder="{{ 'POINTSBADGES.BADGEID' | translate }}">
+        </mat-form-field>
+        <button mat-raised-button (click)="deleteBadge()">{{ 'BADGES.DELETE' | translate }}</button>
+      </div>
+    </mat-tab>
+    <mat-tab label="{{ 'POINTS.STUDIENTS' | translate }}">
+      <br>
+      <mat-form-field *ngIf="!isTeacher">
+        <mat-select [(value)]="groupSelected" placeholder="{{ 'GROUPS.CHOOSE' | translate }}" [formControl]="myControl">
+          <mat-option *ngFor="let group of mygroups" [value]="group.id" (click)="GetStudents()">
+            {{group.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <br>
+      <mat-card *ngIf="!isTeacher">
+        Individual
+        <mat-slide-toggle (change)="individualorteam()" [checked]="teamsmode" [formControl]="myControl">
+          Teams
+        </mat-slide-toggle>
         <div>
-          <button mat-raised-button (click)="showStudents()">{{ 'STUDIENTS.SHOW' | translate }}</button>
+          <button *ngIf="!teammode" mat-raised-button (click)="showStudents()">{{ 'STUDIENTS.SHOW' | translate }}</button>
+          <button *ngIf="teammode" mat-raised-button (click)="showTeams()">{{ 'STUDIENTS.TEAMSHOW' | translate }}</button>
         </div>
-          <br>
-        <mat-card>
-          <table>
-            <thead>
-              <tr class="tableHeader">
-                <th class="positiontit">{{ 'CLASSIFICATION.POSITION' | translate }}</th>
-                <th class="studenttit">{{ 'CLASSIFICATION.STUDENT' | translate }}</th>
-                <th class="pointstit">{{ 'CLASSIFICATION.POINTS' | translate }}</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let score of scores; let i=index;">
-                <td id="position_{{i + 1}}" class="position">{{score.position}}</td>
-                <td>{{score.nameees}}</td>
-                <td>{{score.points}}</td>
-                <td>
-                  <button mat-raised-button color="primary" (click)="showAwards(score.studentId)">View Badges</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </mat-card>
-      </mat-tab>
-    </mat-tab-group>
-  </div>
+      </mat-card>
+      <mat-card *ngIf="isTeacher">
+        <div>
+          <button *ngIf="!teammode" mat-raised-button (click)="showStudents()">{{ 'STUDIENTS.SHOW' | translate }}</button>
+          <button *ngIf="teammode" mat-raised-button (click)="showTeams()">{{ 'STUDIENTS.TEAMSHOW' | translate }}</button>
+        </div>
+      </mat-card>
+      <mat-card>
+        <table *ngIf="!teammode">
+          <thead>
+            <tr class="tableHeader">
+              <th class="positiontit">{{ 'CLASSIFICATION.POSITION' | translate }}</th>
+              <th class="studenttit">{{ 'CLASSIFICATION.STUDENT' | translate }}</th>
+              <th class="pointstit">{{ 'CLASSIFICATION.POINTS' | translate }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let score of scores; let i=index;">
+              <td id="position_{{i + 1}}" class="position">{{score.position}}</td>
+              <td>{{score.nameees}}</td>
+              <td (click)="showPoints(score.studentId)">{{score.points}}</td>
+              <td>
+                <button mat-raised-button color="primary" (click)="showAwards(score.studentId)">View Badges</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <table *ngIf="teammode">
+          <thead>
+            <tr class="tableHeader">
+              <th class="positiontit">{{ 'CLASSIFICATION.POSITION' | translate }}</th>
+              <th class="studenttit">{{ 'CLASSIFICATION.STUDENT' | translate }}</th>
+              <th class="pointstit">{{ 'CLASSIFICATION.POINTS' | translate }}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let scoreteam of scoresteam; let i=index;">
+              <td id="position_{{i + 1}}" class="position">{{scoreteam.position}}</td>
+              <td>{{scoreteam.name}}</td>
+              <td>{{scoreteam.points}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </mat-card>
+    </mat-tab>
+  </mat-tab-group>
+</div>
