teacher changes in home screen: sortable list of students with points

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,6 +1,6 @@
 <div class="home-content">
 
-  <app-teacher-home *ngIf="isTeacherProfile" [profile]="profile" [school]="school"></app-teacher-home>
+  <app-teacher-home *ngIf="isTeacherProfile" [profile]="profile" [school]="school" [allPoints]="allPoints"></app-teacher-home>
 
   <app-student-home *ngIf="isStudentProfile" [profile]="profile" [reward]="reward" [rank]="rank" [studentPoints]="studentPoints"
     [school]="school"></app-student-home>
