--- a/src/app/pages/teacher-home/teacher-home.component.html
+++ b/src/app/pages/teacher-home/teacher-home.component.html
@@ -9,5 +9,30 @@
       <ngx-lorem-ipsum [count]="10"></ngx-lorem-ipsum>
     </mat-card-content>
   </mat-card>
+  <mat-card *ngIf="sortedData">
+    <table matSort (matSortChange)="sortData($event)">
+      <tr>
+        <th sticky></th>
+        <th mat-sort-header="name">Nombre</th>
+        <th mat-sort-header="surname">Apellidos</th>
+        <th mat-sort-header="points">Puntos</th>
+        <th mat-sort-header="level">Nivel</th>
+        <th mat-sort-header="rank">Rango</th>
+        <th mat-sort-header="{{point.id}}" *ngFor="let point of allPoints">{{point.name}}</th>
+      </tr>
+
+      <tr *ngFor="let student of sortedData">
+        <td><img class="table-profile-img" src="{{student.avatar.image}}" alt="profile image of {{student.name}}"></td>
+        <td>{{student.name}}</td>
+        <td>{{student.surname}}</td>
+        <td class="center">{{student.rewards.points}}</td>
+        <td class="center">{{student.rewards.level}}</td>
+        <td>{{student.rewards.rank}}</td>
+        <td *ngFor="let point of allPoints" class="center">
+          {{student.points[point.id]}}
+        </td>
+      </tr>
+    </table>
+  </mat-card>
   <app-school *ngIf="school" [school]="school"></app-school>
 </div>
