--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -26,12 +26,13 @@ $theme: mat-light-theme($classpip-app-primary, $classpip-app-accent, $classpip-a
 html,
 body {
   font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  height: 100%;
   margin: 0;
+  background-color: #fafafa;
+  height: 100%;
 }
 
 app-root>.container {
-  height: 100%;
+  min-height: 100%;
 
   >div {
     max-height: 100% !important; // sass-lint:disable-line no-important
@@ -121,6 +122,19 @@ app-root>.container {
       line-height: 25px;
       text-align: center;
     }
+  }
+}
+
+.list-of-schools {
+  mat-list-item {
+    &:hover {
+      background-color: #ddd;
+    }
+  }
+
+  button {
+    margin-left: 5px;
+    min-width: 120px;
   }
 }
 
