--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -27,7 +27,7 @@ html,
 body {
   font-family: "Roboto", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   margin: 0;
-  background-color: #fafafa;
+  background-color: $classpip-background;
   height: 100%;
 }
 
@@ -37,6 +37,15 @@ app-root>.container {
   >div {
     max-height: 100% !important; // sass-lint:disable-line no-important
   }
+}
+
+.home-content {
+  margin: 40px auto;
+  max-width: 800px;
+}
+
+.home-content>* {
+  width: 100%;
 }
 
 .student-profile {
@@ -115,7 +124,7 @@ app-root>.container {
       top: 10px;
       right: 10px;
       background-color: #ca0000;
-      color: #fff;
+      color: $classpip-white;
       border-radius: 50%;
       height: 25px;
       width: 25px;
@@ -125,6 +134,7 @@ app-root>.container {
   }
 }
 
+.list-of-teachers,
 .list-of-schools {
   mat-list-item {
     &:hover {
@@ -135,6 +145,43 @@ app-root>.container {
   button {
     margin-left: 5px;
     min-width: 120px;
+  }
+}
+
+.school-details-card {
+  color: #fff;
+
+  h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2rem;
+    font-weight: 900;
+    margin: 0;
+    text-transform: uppercase;
+  }
+
+  mat-card-header {
+    margin-bottom: 25px;
+
+    mat-card-subtitle {
+      color: #fff;
+    }
+  }
+
+  mat-card-content {
+    line-height: 22px;
+    padding-left: 20px;
+  }
+
+  mat-card-actions {
+    text-align: end;
+  }
+}
+
+.go-back-btn {
+  margin-bottom: 8px !important;
+
+  mat-icon {
+    font-size: 20px;
   }
 }
 
