--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,3 +10,7 @@ $classpip-app-warn: mat-palette($mat-red);
 
 $classpip-white: #fff;
 $classpip-background: #fafafa;
+
+$classpip-lato: 'Lato',
+Arial,
+sans-serif;
