--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -1,3 +1,18 @@
-@media screen and (min-width: 640px) {
+@media only screen and (min-width: 640px) {
+  .student-profile {
+    .display-level {
+      font-size: 9em;
+    }
+
+    .display-points {
+      font-size: 2.5em;
+    }
+  }
+
+  #hall-of-fame {
+    .ranking-title {
+      padding-left: 0;
+    }
+  }
 
 }
