add more forms, some improvements in code, new translations

--- a/src/app/pages/school-details/school-details.component.scss
+++ b/src/app/pages/school-details/school-details.component.scss
@@ -5,3 +5,12 @@
 mat-list-item {
   border-bottom: 1px solid #cacaca;
 }
+
+.grade-matter-list mat-list-item {
+  border-bottom: 0;
+  padding-left: 20px;
+
+  .delete-rel {
+    min-width: 120px;
+  }
+}
